--- a/assets/scss/templates/_page.scss
+++ b/assets/scss/templates/_page.scss
@@ -102,6 +102,6 @@
 }
 
 
-#main > section.page-section {
+#main > section.page-section:first-of-type {
 	padding-top: 10vh;
 }
